Tests/Conformance/Generated/Builtin/Constant/Value/Key_too_long_2.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Value.Key_too_long_2

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_value_key_too_long_2 "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/value/key-too-long-2/key-too-long-2.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Value.Key_too_long_2
